--- a/osr-mapping.tex
+++ b/osr-mapping.tex
@@ -39,6 +39,7 @@ We reason on the structure of the transition relation $\Rightarrow_{\pi}$ for ou
 
 
 \subsubsection{OSR Mapping Generation Algorithm}
+\label{ss:osr-mapping-algorithms}
 We now discuss an algorithm that, given a program $\pi$ and a rewrite rule $T$, generates:
 \begin{enumerate}[itemsep=0pt,parsep=3pt]
  \item a program $\pi'=\mysem{T}(\pi)$;
