--- a/bibliography/biblio.bib
+++ b/bibliography/biblio.bib
@@ -2371,6 +2371,11 @@
   note = {\url{http://www.phoronix-test-suite.com/} Accessed: 2016-03-27}
 }
 
+@misc{SpecJVM2008,
+ author = {{SPECjvm2008 Java Virtual Machine Benchmark}},
+ note = {\url{https://www.spec.org/jvm2008/} Accessed: 2016-03-27}
+}
+
 @misc{PEP,
   author = {{Jikes RVM Research Archive}},
   title = {{{PEP}: continuous path and edge profiling}},
