--- a/case-studies.tex
+++ b/case-studies.tex
@@ -3,7 +3,7 @@
 
 In this chapter we discuss three cases studies to explore the end-to-end utility of the techniques proposed in \mychapter\ref{ch:profiling} and \mychapter\ref{ch:continuous}. In the first case study, we show an example of profile-driven optimization based on our multi-iteration path profiling techniques. In particular, we show that the code of a masked convolution filter used for image processing can be adapted to exploit the characteristics of the workload, achieving two-digit speedups in preliminary experiments. We also discuss a possible application of multi-iteration path profiles to trace schedulers.
 
-The second case study, which has been reproduced and endorsed by the joint Artifact Evaluation process of CGO-PPoPP 2016, presents an example of the end-to-end utility of \osrkit. The flexibility offered by its compensation code abstraction allowed us to implement an optimization mechanism for a higher-order construct of the MATLAB language that significantly advances the state of the art compared to previous approaches, nearly matching the performance of code optimized by hand.
+The second case study, which has been reproduced and endorsed by the joint Artifact Evaluation process of CGO-PPoPP 2016, presents an example of adaptive type specialization enabled by \osrkit. The flexibility offered by its compensation code abstraction allowed us to implement an optimization mechanism for a higher-order construct of the MATLAB language that significantly advances the state of the art compared to previous approaches, nearly matching the performance of code optimized by hand.
 
 Finally, the third case study illustrates an application of our algorithms to automatically build OSR mappings to the context of source-level debugging of optimized code. On prominent C benchmarks, the \reconstruct\ algorithm is able to recovery the expected source-level values for the vast majority of user variables that become endangered due to the effects of classic compiler optimizations.
 
